work toward native image